# embedded-mcu

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: cargo-vet.yml  check.yml  nostd.yml
embedded-mcu-hal/: Cargo.toml  README.md
embedded-mcu-hal/src/: lib.rs  nvram.rs  watchdog.rs
embedded-mcu-hal/src/smbus/bus/: asynch.rs  mod.rs
embedded-mcu-hal/src/time/: datetime.rs  datetime_clock.rs  mod.rs
mcu-traits/: Cargo.toml
mcu-traits/src/: datetime.rs  datetime_clock.rs  lib.rs
storage-bus/: Cargo.toml  README.md
storage-bus/src/: nor.rs
supply-chain/: audits.toml  config.toml
