[workspace]
resolver = "2"
members = ["mcu-traits"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/embedded-mcu"

[workspace.dependencies]
embedded-services = { git = "https://github.com/OpenDevicePartnership/embedded-services" }
