[workspace]
resolver = "2"
members = ["embedded-mcu-hal", "storage-bus"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/embedded-mcu"

[workspace.dependencies]
embedded-services = { git = "https://github.com/OpenDevicePartnership/embedded-services" }

[workspace.lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
