[workspace]
resolver = "2"
members = ["embedded-mcu-hal", "storage-bus"]

[workspace.package]
authors = ["Jerry Xie <jerryxie@microsoft.com>", "Billy Price <williamp@microsoft.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/embedded-mcu"

[workspace.lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
