[package]
name = "embedded-mcu-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "1.0", optional = true }
num_enum = { version = "0.7.5", default-features = false }

[dev-dependencies]
proptest = "1.0.0"

[features]
default = []

chrono = ["dep:chrono"]
defmt = ["dep:defmt"]
no_panic = []

[lints.clippy]
all = { level = "allow", priority = -1 }
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
