[package]
name = "embedded-mcu-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "1.0", optional = true }
num_enum = { version = "0.7.5", default-features = false }

[dev-dependencies]
proptest = "1.0.0"

[features]
default = []

chrono = ["dep:chrono"]
defmt = ["dep:defmt"]

[lints]
workspace = true
